[gd_scene load_steps=34 format=2]

[ext_resource path="res://assets/images/iconsgear/workeroutfit.png" type="Texture" id=1]
[ext_resource path="res://assets/images/iconsitems/cell/neck.png" type="Texture" id=2]
[ext_resource path="res://assets/images/raceshades/Human_F.png" type="Texture" id=3]
[ext_resource path="res://assets/images/traits/bowextradamage.png" type="Texture" id=4]
[ext_resource path="res://assets/Textures_v2/CHAR_INFO old/Panels/panel_slavebody.png" type="Texture" id=5]
[ext_resource path="res://assets/Textures_v2/INVENTORY/Panels/panel_item.png" type="Texture" id=6]
[ext_resource path="res://assets/Textures_v2/INVENTORY/Panels/panel_item_hover.png" type="Texture" id=7]
[ext_resource path="res://assets/Textures_v2/INVENTORY/Panels/panel_item_pressed.png" type="Texture" id=8]
[ext_resource path="res://assets/images/iconsitems/cell/pelvis.png" type="Texture" id=9]
[ext_resource path="res://assets/Fonts_v2/FontThemes/MainSmallBold.tres" type="DynamicFont" id=10]
[ext_resource path="res://assets/Textures_v2/MANSION/Craft/Buttons/button_craftchoose.png" type="Texture" id=11]
[ext_resource path="res://assets/Textures_v2/INVENTORY/Buttons/icon_all_hover.png" type="Texture" id=12]
[ext_resource path="res://assets/Textures_v2/INVENTORY/Buttons/icon_all.png" type="Texture" id=13]
[ext_resource path="res://assets/Textures_v2/Tattoo/icon_tattoo_hover.png" type="Texture" id=14]
[ext_resource path="res://assets/Textures_v2/CHAR_INFO old/Panels/body_mask.png" type="Texture" id=15]
[ext_resource path="res://assets/Textures_v2/Tattoo/icon_tattoo.png" type="Texture" id=16]
[ext_resource path="res://ragdoll.tscn" type="PackedScene" id=17]
[ext_resource path="res://gui_modules/Inventory/Scripts/InventoryGearModule.gd" type="Script" id=18]
[ext_resource path="res://assets/Textures_v2/Tattoo/frame_tattoo.png" type="Texture" id=19]
[ext_resource path="res://assets/images/iconsitems/cell/legs.png" type="Texture" id=20]
[ext_resource path="res://assets/Textures_v2/Tattoo/frame_tattoo_pressed.png" type="Texture" id=21]
[ext_resource path="res://assets/Textures_v2/Tattoo/frame_tattoo_disabled.png" type="Texture" id=22]
[ext_resource path="res://assets/images/iconsitems/cell/hand right.png" type="Texture" id=23]
[ext_resource path="res://assets/images/iconsitems/cell/hand left.png" type="Texture" id=24]
[ext_resource path="res://assets/images/iconsitems/cell/body.png" type="Texture" id=25]
[ext_resource path="res://assets/images/iconsitems/cell/head.png" type="Texture" id=26]
[ext_resource path="res://assets/images/iconsitems/cell/gloves.png" type="Texture" id=27]
[ext_resource path="res://assets/images/iconsitems/cell/tool.png" type="Texture" id=28]
[ext_resource path="res://assets/images/iconsitems/cell/booty.png" type="Texture" id=29]
[ext_resource path="res://assets/images/iconsitems/cell/underwear.png" type="Texture" id=30]
[ext_resource path="res://assets/images/iconsitems/quality_bg/blue.png" type="Texture" id=31]
[ext_resource path="res://assets/images/gui/panels/edit.png" type="Texture" id=32]

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 5 )
region_rect = Rect2( 0, 0, 700, 1050 )

[node name="InventoryGearModule" type="Panel"]
light_mask = 0
margin_right = 705.0
margin_bottom = 1050.0
custom_styles/panel = SubResource( 1 )
script = ExtResource( 18 )

[node name="BodyImage" type="TextureRect" parent="."]
show_behind_parent = true
light_mask = 2
margin_left = -139.051
margin_top = 49.7558
margin_right = 860.949
margin_bottom = 1049.76
texture = ExtResource( 3 )
expand = true
stretch_mode = 6

[node name="ragdoll" parent="." instance=ExtResource( 17 )]
show_behind_parent = true
position = Vector2( 340, 450 )
scale = Vector2( 0.8, 0.8 )

[node name="bodymask" type="Light2D" parent="."]
position = Vector2( 353.676, 537.294 )
scale = Vector2( 1.13454, 1.13454 )
texture = ExtResource( 15 )
mode = 3
range_item_cull_mask = 4

[node name="InventorySlots" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="chest" type="TextureButton" parent="InventorySlots"]
light_mask = 0
margin_left = 551.568
margin_top = 299.451
margin_right = 651.568
margin_bottom = 399.451
rect_min_size = Vector2( 100, 100 )
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 7 )
texture_hover = ExtResource( 8 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="qualitycolor" type="TextureRect" parent="InventorySlots/chest"]
visible = false
show_behind_parent = true
margin_left = 1.0
margin_top = 2.0
margin_right = 99.0
margin_bottom = 99.0
texture = ExtResource( 31 )
expand = true
stretch_mode = 6
__meta__ = {
"_editor_description_": ""
}

[node name="icon" type="TextureRect" parent="InventorySlots/chest"]
show_behind_parent = true
light_mask = 0
margin_top = -0.546295
margin_right = 100.0
margin_bottom = 99.4537
rect_min_size = Vector2( 100, 100 )
texture = ExtResource( 25 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="icon2" type="TextureRect" parent="InventorySlots/chest"]
show_behind_parent = true
light_mask = 0
margin_top = -0.546295
margin_right = 100.0
margin_bottom = 99.4537
rect_min_size = Vector2( 100, 100 )
texture = ExtResource( 25 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="underwear" type="TextureButton" parent="InventorySlots"]
light_mask = 0
margin_left = 551.568
margin_top = 562.451
margin_right = 651.568
margin_bottom = 662.451
rect_min_size = Vector2( 100, 100 )
rect_pivot_offset = Vector2( -181.228, -80.451 )
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 8 )
texture_hover = ExtResource( 7 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="qualitycolor" type="TextureRect" parent="InventorySlots/underwear"]
visible = false
show_behind_parent = true
margin_left = 1.0
margin_top = 2.0
margin_right = 99.0
margin_bottom = 99.0
texture = ExtResource( 31 )
expand = true
stretch_mode = 6
__meta__ = {
"_editor_description_": ""
}

[node name="icon" type="TextureRect" parent="InventorySlots/underwear"]
show_behind_parent = true
light_mask = 0
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 100, 100 )
texture = ExtResource( 30 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="icon2" type="TextureRect" parent="InventorySlots/underwear"]
show_behind_parent = true
light_mask = 0
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 100, 100 )
texture = ExtResource( 30 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="legs" type="TextureButton" parent="InventorySlots"]
light_mask = 0
margin_left = 551.568
margin_top = 409.451
margin_right = 651.568
margin_bottom = 509.451
rect_min_size = Vector2( 100, 100 )
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 8 )
texture_hover = ExtResource( 7 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="qualitycolor" type="TextureRect" parent="InventorySlots/legs"]
visible = false
show_behind_parent = true
margin_left = 1.0
margin_top = 2.0
margin_right = 99.0
margin_bottom = 99.0
texture = ExtResource( 31 )
expand = true
stretch_mode = 6
__meta__ = {
"_editor_description_": ""
}

[node name="icon" type="TextureRect" parent="InventorySlots/legs"]
show_behind_parent = true
light_mask = 0
margin_top = -1.22778
margin_right = 100.0
margin_bottom = 98.7722
rect_min_size = Vector2( 100, 100 )
texture = ExtResource( 20 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="icon2" type="TextureRect" parent="InventorySlots/legs"]
show_behind_parent = true
light_mask = 0
margin_top = -1.22778
margin_right = 100.0
margin_bottom = 98.7722
rect_min_size = Vector2( 100, 100 )
texture = ExtResource( 20 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="hands" type="TextureButton" parent="InventorySlots"]
light_mask = 0
margin_left = 55.0
margin_top = 305.451
margin_right = 155.0
margin_bottom = 405.451
rect_min_size = Vector2( 100, 100 )
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 8 )
texture_hover = ExtResource( 7 )
expand = true

[node name="qualitycolor" type="TextureRect" parent="InventorySlots/hands"]
visible = false
show_behind_parent = true
margin_left = 1.0
margin_top = 2.0
margin_right = 99.0
margin_bottom = 99.0
texture = ExtResource( 31 )
expand = true
stretch_mode = 6
__meta__ = {
"_editor_description_": ""
}

[node name="icon" type="TextureRect" parent="InventorySlots/hands"]
show_behind_parent = true
light_mask = 0
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 100, 100 )
texture = ExtResource( 27 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_lock_": true
}

[node name="icon2" type="TextureRect" parent="InventorySlots/hands"]
show_behind_parent = true
light_mask = 0
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 100, 100 )
texture = ExtResource( 27 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_lock_": true
}

[node name="rhand" type="TextureButton" parent="InventorySlots"]
light_mask = 0
margin_left = 55.5678
margin_top = 87.451
margin_right = 155.568
margin_bottom = 187.451
rect_min_size = Vector2( 100, 100 )
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 8 )
texture_hover = ExtResource( 7 )
expand = true

[node name="qualitycolor" type="TextureRect" parent="InventorySlots/rhand"]
visible = false
show_behind_parent = true
margin_left = 1.0
margin_top = 2.0
margin_right = 99.0
margin_bottom = 99.0
texture = ExtResource( 31 )
expand = true
stretch_mode = 6
__meta__ = {
"_editor_description_": ""
}

[node name="icon" type="TextureRect" parent="InventorySlots/rhand"]
show_behind_parent = true
light_mask = 0
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 100, 100 )
texture = ExtResource( 23 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="icon2" type="TextureRect" parent="InventorySlots/rhand"]
show_behind_parent = true
light_mask = 0
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 100, 100 )
texture = ExtResource( 23 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="lhand" type="TextureButton" parent="InventorySlots"]
light_mask = 0
margin_left = 54.568
margin_top = 197.451
margin_right = 154.568
margin_bottom = 297.451
rect_min_size = Vector2( 100, 100 )
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 8 )
texture_hover = ExtResource( 7 )
expand = true

[node name="qualitycolor" type="TextureRect" parent="InventorySlots/lhand"]
visible = false
show_behind_parent = true
margin_left = 1.0
margin_top = 2.0
margin_right = 99.0
margin_bottom = 99.0
texture = ExtResource( 31 )
expand = true
stretch_mode = 6
__meta__ = {
"_editor_description_": ""
}

[node name="icon" type="TextureRect" parent="InventorySlots/lhand"]
show_behind_parent = true
light_mask = 0
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 100, 100 )
texture = ExtResource( 24 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="icon2" type="TextureRect" parent="InventorySlots/lhand"]
show_behind_parent = true
light_mask = 0
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 100, 100 )
texture = ExtResource( 24 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="neck" type="TextureButton" parent="InventorySlots"]
light_mask = 0
margin_left = 552.568
margin_top = 193.451
margin_right = 652.568
margin_bottom = 293.451
rect_min_size = Vector2( 100, 100 )
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 8 )
texture_hover = ExtResource( 7 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="qualitycolor" type="TextureRect" parent="InventorySlots/neck"]
visible = false
show_behind_parent = true
margin_left = 1.0
margin_top = 2.0
margin_right = 99.0
margin_bottom = 99.0
texture = ExtResource( 31 )
expand = true
stretch_mode = 6
__meta__ = {
"_editor_description_": ""
}

[node name="icon" type="TextureRect" parent="InventorySlots/neck"]
show_behind_parent = true
light_mask = 0
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 100, 100 )
texture = ExtResource( 2 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="icon2" type="TextureRect" parent="InventorySlots/neck"]
show_behind_parent = true
light_mask = 0
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 100, 100 )
texture = ExtResource( 2 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="head" type="TextureButton" parent="InventorySlots"]
light_mask = 0
margin_left = 551.568
margin_top = 82.4508
margin_right = 651.568
margin_bottom = 182.451
rect_min_size = Vector2( 100, 100 )
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 8 )
texture_hover = ExtResource( 7 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="qualitycolor" type="TextureRect" parent="InventorySlots/head"]
visible = false
show_behind_parent = true
margin_left = 1.0
margin_top = 2.0
margin_right = 99.0
margin_bottom = 99.0
texture = ExtResource( 31 )
expand = true
stretch_mode = 6
__meta__ = {
"_editor_description_": ""
}

[node name="icon" type="TextureRect" parent="InventorySlots/head"]
show_behind_parent = true
light_mask = 0
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 100, 100 )
texture = ExtResource( 26 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="icon2" type="TextureRect" parent="InventorySlots/head"]
show_behind_parent = true
light_mask = 0
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 100, 100 )
texture = ExtResource( 26 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ass" type="TextureButton" parent="InventorySlots"]
light_mask = 0
margin_left = 551.568
margin_top = 776.451
margin_right = 651.568
margin_bottom = 876.451
rect_min_size = Vector2( 100, 100 )
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 8 )
texture_hover = ExtResource( 7 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="qualitycolor" type="TextureRect" parent="InventorySlots/ass"]
visible = false
show_behind_parent = true
margin_left = 1.0
margin_top = 2.0
margin_right = 99.0
margin_bottom = 99.0
texture = ExtResource( 31 )
expand = true
stretch_mode = 6
__meta__ = {
"_editor_description_": ""
}

[node name="icon" type="TextureRect" parent="InventorySlots/ass"]
show_behind_parent = true
light_mask = 0
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 100, 100 )
texture = ExtResource( 29 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_lock_": true
}

[node name="icon2" type="TextureRect" parent="InventorySlots/ass"]
show_behind_parent = true
light_mask = 0
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 100, 100 )
texture = ExtResource( 29 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_lock_": true
}

[node name="crotch" type="TextureButton" parent="InventorySlots"]
light_mask = 0
margin_left = 551.568
margin_top = 672.451
margin_right = 651.568
margin_bottom = 772.451
rect_min_size = Vector2( 100, 100 )
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 8 )
texture_hover = ExtResource( 7 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="qualitycolor" type="TextureRect" parent="InventorySlots/crotch"]
visible = false
show_behind_parent = true
margin_left = 1.0
margin_top = 2.0
margin_right = 99.0
margin_bottom = 99.0
texture = ExtResource( 31 )
expand = true
stretch_mode = 6
__meta__ = {
"_editor_description_": ""
}

[node name="icon" type="TextureRect" parent="InventorySlots/crotch"]
show_behind_parent = true
light_mask = 0
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 100, 100 )
texture = ExtResource( 9 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="icon2" type="TextureRect" parent="InventorySlots/crotch"]
show_behind_parent = true
light_mask = 0
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 100, 100 )
texture = ExtResource( 9 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="tool" type="TextureButton" parent="InventorySlots"]
light_mask = 0
margin_left = 56.568
margin_top = 413.451
margin_right = 156.568
margin_bottom = 513.451
rect_min_size = Vector2( 100, 100 )
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 8 )
texture_hover = ExtResource( 7 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="qualitycolor" type="TextureRect" parent="InventorySlots/tool"]
visible = false
show_behind_parent = true
margin_left = 1.0
margin_top = 2.0
margin_right = 99.0
margin_bottom = 99.0
texture = ExtResource( 31 )
expand = true
stretch_mode = 6
__meta__ = {
"_editor_description_": ""
}

[node name="icon" type="TextureRect" parent="InventorySlots/tool"]
show_behind_parent = true
light_mask = 0
margin_left = -1.0
margin_right = 99.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 100 )
texture = ExtResource( 28 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="icon2" type="TextureRect" parent="InventorySlots/tool"]
show_behind_parent = true
light_mask = 0
margin_left = -1.0
margin_right = 99.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 100 )
texture = ExtResource( 28 )
expand = true
stretch_mode = 6

[node name="recolor_buttons" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="weapon" type="TextureButton" parent="recolor_buttons"]
margin_left = 9.0
margin_top = 117.0
margin_right = 53.0
margin_bottom = 161.0
hint_tooltip = "Change Color"
texture_normal = ExtResource( 32 )
texture_pressed = ExtResource( 32 )
texture_hover = ExtResource( 32 )
expand = true

[node name="base" type="TextureButton" parent="recolor_buttons"]
margin_left = 652.0
margin_top = 327.0
margin_right = 696.0
margin_bottom = 371.0
hint_tooltip = "Change Color"
texture_normal = ExtResource( 32 )
texture_pressed = ExtResource( 32 )
texture_hover = ExtResource( 32 )
expand = true

[node name="lower" type="TextureButton" parent="recolor_buttons"]
margin_left = 650.0
margin_top = 438.0
margin_right = 694.0
margin_bottom = 482.0
hint_tooltip = "Change Color"
texture_normal = ExtResource( 32 )
texture_pressed = ExtResource( 32 )
texture_hover = ExtResource( 32 )
expand = true

[node name="underwear" type="TextureButton" parent="recolor_buttons"]
visible = false
margin_left = 652.0
margin_top = 589.0
margin_right = 696.0
margin_bottom = 633.0
hint_tooltip = "Change Color"
texture_normal = ExtResource( 32 )
texture_pressed = ExtResource( 32 )
texture_hover = ExtResource( 32 )
expand = true

[node name="buffscontainer" type="HBoxContainer" parent="."]
modulate = Color( 1, 1, 1, 0.823529 )
self_modulate = Color( 1, 1, 1, 0.823529 )
show_behind_parent = true
light_mask = 0
margin_left = 9.0
margin_top = 941.0
margin_right = 705.0
margin_bottom = 1046.0
custom_constants/separation = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="TextureRect" parent="buffscontainer"]
visible = false
show_behind_parent = true
margin_right = 100.0
margin_bottom = 105.0
rect_min_size = Vector2( 100, 100 )
texture = ExtResource( 4 )
expand = true
stretch_mode = 1

[node name="Label" type="Label" parent="buffscontainer/Button"]
margin_left = 52.5601
margin_top = 74.947
margin_right = 101.56
margin_bottom = 101.947
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 10 )
text = "5"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="buffscontainer/Button"]
show_behind_parent = true
margin_left = -2.0
margin_top = -2.0
margin_right = 103.0
margin_bottom = 103.0
rect_min_size = Vector2( 105, 105 )
texture = ExtResource( 11 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TattooSlots" type="Control" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="face" type="TextureButton" parent="TattooSlots"]
light_mask = 0
margin_left = 28.0
margin_top = 173.0
margin_right = 128.0
margin_bottom = 273.0
rect_min_size = Vector2( 100, 100 )
toggle_mode = true
texture_normal = ExtResource( 19 )
texture_pressed = ExtResource( 21 )
texture_disabled = ExtResource( 22 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="icon" type="TextureRect" parent="TattooSlots/face"]
light_mask = 0
margin_left = 13.2292
margin_top = 12.2292
margin_right = 88.2292
margin_bottom = 87.2292
rect_min_size = Vector2( 75, 75 )
texture = ExtResource( 1 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="neck" type="TextureButton" parent="TattooSlots"]
light_mask = 0
margin_left = 28.0
margin_top = 304.0
margin_right = 128.0
margin_bottom = 404.0
rect_min_size = Vector2( 100, 100 )
toggle_mode = true
texture_normal = ExtResource( 19 )
texture_pressed = ExtResource( 21 )
texture_disabled = ExtResource( 22 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="icon" type="TextureRect" parent="TattooSlots/neck"]
light_mask = 0
margin_left = 12.5992
margin_top = 12.0529
margin_right = 87.5992
margin_bottom = 87.0529
rect_min_size = Vector2( 75, 75 )
texture = ExtResource( 1 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="arms" type="TextureButton" parent="TattooSlots"]
light_mask = 0
margin_left = 584.0
margin_top = 482.0
margin_right = 684.0
margin_bottom = 582.0
rect_min_size = Vector2( 100, 100 )
toggle_mode = true
texture_normal = ExtResource( 19 )
texture_pressed = ExtResource( 21 )
texture_disabled = ExtResource( 22 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="icon" type="TextureRect" parent="TattooSlots/arms"]
light_mask = 0
margin_left = 12.5992
margin_top = 12.0529
margin_right = 87.5992
margin_bottom = 87.0529
rect_min_size = Vector2( 75, 75 )
texture = ExtResource( 1 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="chest" type="TextureButton" parent="TattooSlots"]
light_mask = 0
margin_left = 28.0
margin_top = 448.0
margin_right = 128.0
margin_bottom = 548.0
rect_min_size = Vector2( 100, 100 )
toggle_mode = true
texture_normal = ExtResource( 19 )
texture_pressed = ExtResource( 21 )
texture_disabled = ExtResource( 22 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="icon" type="TextureRect" parent="TattooSlots/chest"]
light_mask = 0
margin_left = 13.2292
margin_top = 12.0529
margin_right = 88.2292
margin_bottom = 87.0529
rect_min_size = Vector2( 75, 75 )
texture = ExtResource( 1 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="crotch" type="TextureButton" parent="TattooSlots"]
light_mask = 0
margin_left = 581.0
margin_top = 762.0
margin_right = 681.0
margin_bottom = 862.0
rect_min_size = Vector2( 100, 100 )
toggle_mode = true
texture_normal = ExtResource( 19 )
texture_pressed = ExtResource( 21 )
texture_disabled = ExtResource( 22 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="icon" type="TextureRect" parent="TattooSlots/crotch"]
light_mask = 0
margin_left = 12.2704
margin_top = 11.7241
margin_right = 87.2704
margin_bottom = 86.7241
rect_min_size = Vector2( 75, 75 )
texture = ExtResource( 1 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="waist" type="TextureButton" parent="TattooSlots"]
light_mask = 0
margin_left = 584.0
margin_top = 629.0
margin_right = 684.0
margin_bottom = 729.0
rect_min_size = Vector2( 100, 100 )
toggle_mode = true
texture_normal = ExtResource( 19 )
texture_pressed = ExtResource( 21 )
texture_disabled = ExtResource( 22 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="icon" type="TextureRect" parent="TattooSlots/waist"]
light_mask = 0
margin_left = 13.2142
margin_top = 12.6679
margin_right = 88.2142
margin_bottom = 87.6679
rect_min_size = Vector2( 75, 75 )
texture = ExtResource( 1 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ass" type="TextureButton" parent="TattooSlots"]
light_mask = 0
margin_left = 30.0
margin_top = 767.0
margin_right = 130.0
margin_bottom = 867.0
rect_min_size = Vector2( 100, 100 )
toggle_mode = true
texture_normal = ExtResource( 19 )
texture_pressed = ExtResource( 21 )
texture_disabled = ExtResource( 22 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="icon" type="TextureRect" parent="TattooSlots/ass"]
light_mask = 0
margin_left = 13.2143
margin_top = 12.6679
margin_right = 88.2143
margin_bottom = 87.6679
rect_min_size = Vector2( 75, 75 )
texture = ExtResource( 1 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="legs" type="TextureButton" parent="TattooSlots"]
light_mask = 0
margin_left = 30.0
margin_top = 908.0
margin_right = 130.0
margin_bottom = 1008.0
rect_min_size = Vector2( 100, 100 )
toggle_mode = true
texture_normal = ExtResource( 19 )
texture_pressed = ExtResource( 21 )
texture_disabled = ExtResource( 22 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="icon" type="TextureRect" parent="TattooSlots/legs"]
light_mask = 0
margin_left = 14.1581
margin_top = 12.6679
margin_right = 89.1581
margin_bottom = 87.6679
rect_min_size = Vector2( 75, 75 )
texture = ExtResource( 1 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TattooButton" type="TextureButton" parent="."]
margin_left = 622.0
margin_top = 968.0
margin_right = 676.0
margin_bottom = 1022.0
hint_tooltip = "Tattoo"
texture_normal = ExtResource( 16 )
texture_hover = ExtResource( 14 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InventoryButton" type="TextureButton" parent="."]
visible = false
margin_left = 623.819
margin_top = 872.451
margin_right = 677.819
margin_bottom = 926.451
hint_tooltip = "Gear"
texture_normal = ExtResource( 13 )
texture_hover = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}
